Fix image to modal (i.e. avoid scrollbars)

--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -28,6 +28,13 @@
                     }
                 }
             }
+            .modal-body--image {
+                height: 72vh;
+                .chat-image {
+                    max-height: 99%;
+                    max-width: 100%;
+                }
+            }
             .modal-footer {
                 justify-content: flex-start;
             }
